tabs alignment bug fix

--- a/src/scss/modules/tabs/_mixins.scss
+++ b/src/scss/modules/tabs/_mixins.scss
@@ -21,13 +21,13 @@ $tabs-color-hover: $primary !default;
 $tabs-color-active: $primary !default;
 
 /// $tabs-default-link-padding: rem-calc(6 12)!default;
-$tabs-default-link-padding: 6px 12px !default;
+$tabs-default-link-padding: 6px 12px 10px !default;
 
 /// $tabs-bordered-link-padding: $tabs-default-link-padding!default;
-$tabs-bordered-link-padding: $tabs-default-link-padding !default;
+$tabs-bordered-link-padding: 6px 12px !default;
 
 /// $tabs-toggle-link-padding: $tabs-default-link-padding!default;
-$tabs-toggle-link-padding: $tabs-default-link-padding !default;
+$tabs-toggle-link-padding: 6px 12px !default;
 
 /// $tabs-default-space-between: rem-calc(0)!default;
 $tabs-default-space-between: 0 !default;
@@ -73,7 +73,7 @@ $tab-font-size-lg: 20px !default;
   overflow: hidden;
 
   @if $tabs-full-width-border {
-    border-bottom: $tabs-borders;
+    box-shadow: inset 0 -2px 0 0 #e6edf1;
   }
 }
 
@@ -95,7 +95,7 @@ $tab-font-size-lg: 20px !default;
   border-bottom: $tabs-link-border-bottom solid transparent;
 
   @if $tabs-full-width-border {
-    margin-bottom: -1px;
+    // margin-bottom: -1px;
   }
 
   a {
