--- a/src/scss/modules/tabs/tabs.scss
+++ b/src/scss/modules/tabs/tabs.scss
@@ -18,6 +18,7 @@
 
 .c-tabs-bordered {
   border-bottom: $tabs-borders;
+  box-shadow: none;
 
   .c-tab-item {
     .c-tab-item-link {
@@ -53,6 +54,7 @@
 
 .c-tabs-toggle {
   border-bottom: 0;
+  box-shadow: none;
 
   .c-tab-item {
     border: $tabs-borders;
